@@ -36,6 +36,8 @@ Bugs fixed
 * #9456: html search: abbreation marks are inserted to the search result if
   failed to fetch the content of the page
 * #9267: html theme: CSS and JS files added by theme were loaded twice
+* #9535 comment: C++, fix parsing of defaulted function parameters that are
+  function pointers.
 
 Testing
 --------
